--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
+  
 </head>
 <body>
   <app-root></app-root>
